--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <!-- =============================================================== -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
     <link
-      href="http://fonts.googleapis.com/css?family=Montserrat:400,700"
+      href="//fonts.googleapis.com/css?family=Montserrat:400,700"
       rel="stylesheet"
       type="text/css"
     />
     <link
-      href="http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
+      href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
     <link href="assets/css/theme.css" rel="stylesheet" />
@@ -84,7 +84,7 @@
                   experience.</span
                 ><br />
                 <div class="logos">
-                  <a href="http://lnkd.in/svu8Eg" target="_blank"
+                  <a href="//lnkd.in/svu8Eg" target="_blank"
                     ><i class="fa fa-linkedin fa-border fa-2x"></i
                   ></a>
                   <a href="https://github.com/greenham" target="_blank"
@@ -201,7 +201,7 @@
             <h4 align="center">Discord+Twitch Bot</h4>
             <a
               class="wrapper-portfolio"
-              href="http://helpa.alttp.run"
+              href="//helpa.alttp.run"
               target="_blank"
             >
               <img
@@ -473,7 +473,7 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-sm-12">
-            <a href="http://lnkd.in/svu8Eg" target="_blank"
+            <a href="//lnkd.in/svu8Eg" target="_blank"
               ><i class="fa fa-linkedin fa-border"></i
             ></a>
             <a href="https://github.com/greenham" target="_blank"
