--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </div>
           <div class="col-sm-4 margin-bottom-xs">
             <h4 align="center">Web Application</h4>
-            <a class="wrapper-portfolio" href="#portfolio">
+            <a class="wrapper-portfolio" href="http://v2w.ghsdev.me" target="_blank">
               <img
                 class="img-responsive"
                 src="assets/images/volum-io-sm.png"
@@ -158,7 +158,7 @@
           </div>
           <div class="col-sm-4 margin-bottom-xs">
             <h4 align="center">API Integration</h4>
-            <a class="wrapper-portfolio" href="#portfolio">
+            <a class="wrapper-portfolio" href="https://github.com/greenham/top-retweet-streamer" target="_blank">
               <img
                 class="img-responsive"
                 src="assets/images/top-rt-streamer.png"
