update v2w link and screenshot

--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
             <h4 align="center">Web Application</h4>
             <a
               class="wrapper-portfolio"
-              href="http://v2w.ghsdev.me"
+              href="https://greenham.github.io/volum.io/"
               target="_blank"
             >
               <img
                 class="img-responsive"
-                src="assets/images/volum-io-sm.png"
+                src="https://greenham.github.io/volum.io/screenshot.png"
                 alt="volume2weight"
               />
               <h3 class="category">volum.io</h3>
