--- a/index.html
+++ b/index.html
@@ -140,14 +140,10 @@
           </div>
           <div class="col-sm-4 margin-bottom-xs">
             <h4 align="center">Web Application</h4>
-            <a
-              class="wrapper-portfolio"
-              href="https://greenham.github.io/volum.io/"
-              target="_blank"
-            >
+            <a class="wrapper-portfolio" href="https://v2w.app" target="_blank">
               <img
                 class="img-responsive"
-                src="https://greenham.github.io/volum.io/screenshot.png"
+                src="https://v2w.app/screenshot.png"
                 alt="volume2weight"
               />
               <h3 class="category">volum.io</h3>
