Update greeting message in index.html

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="row">
             <div class="col-sm-12">
               <h1 class="text-center">
-                Hello!<br />My name is Chris.<br /><span style="font-size: 75%"
+                👋 Hello!<br /><span style="font-size: 75%"
                   >I'm a full-stack web developer with over 20 years of
                   experience.</span
                 ><br />
