--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   <a href="https://github.com/greenham" target="_blank"
                     ><i class="fa fa-github fa-border fa-2x"></i
                   ></a>
-                  <a href="mailto:chris@ghsdev.me"
+                  <a href="mailto:contact@ghsdev.me"
                     ><i class="fa fa-envelope fa-border fa-2x"></i
                   ></a>
                 </div>
@@ -231,7 +231,7 @@
             <h4 align="center">Your Project Here</h4>
             <a
               class="wrapper-portfolio"
-              href="mailto:chris@ghsdev.me"
+              href="mailto:contact@ghsdev.me"
               target="_blank"
             >
               <img
@@ -248,8 +248,8 @@
                 solution for virtually any business, hobby, or idea all the way
                 from consultation to implementation. Even if you're not exactly
                 sure what you need,
-                <a href="mailto:chris@ghsdev.me">feel free to contact me</a> and
-                I'll help in whatever capacity possible.</small
+                <a href="mailto:contact@ghsdev.me">feel free to contact me</a>
+                and I'll help in whatever capacity possible.</small
               >
             </p>
           </div>
@@ -463,7 +463,7 @@
         <div class="row">
           <div class="col-sm-12 text-center">
             <h3>Feel free to contact me for your next project</h3>
-            <a href="mailto:chris@ghsdev.me" class="mail"
+            <a href="mailto:contact@ghsdev.me" class="mail"
               ><span class="glyphicon glyphicon-envelope"></span>E-MAIL</a
             >
           </div>
@@ -483,7 +483,7 @@
             <a href="https://github.com/greenham" target="_blank"
               ><i class="fa fa-github fa-border"></i
             ></a>
-            <a href="mailto:chris@ghsdev.me"
+            <a href="mailto:contact@ghsdev.me"
               ><i class="fa fa-envelope fa-border"></i
             ></a>
           </div>
