update page title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Custom Web Development Services | Green Ham Solutions</title>
+    <title>Senior Web Developer - greenHam</title>
   </head>
   <body>
     <div id="root"></div>
